Test of API in the demonstrator is OK

--- a/ml/SERAPP__AGBONON_ADAGBEDJI.ipynb
+++ b/ml/SERAPP__AGBONON_ADAGBEDJI.ipynb
@@ -1735,7 +1735,7 @@
       ],
       "source": [
         "audio_file = \"data/audio_speech_emotion/ang_N_dogs_rep1_F2.wav\"\n",
-        "predict_emotion(audio_file)"
+        "predict_emotion(audio_file)™"
       ]
     }
   ],
