--- a/ml/SERAPP__SIAKE_1.ipynb
+++ b/ml/SERAPP__SIAKE_1.ipynb
@@ -702,11 +702,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def extract_features(data):\n",
+        "def extract_features(data, sample_rate):\n",
         "    # ZCR (Zero Crossing Rate)\n",
         "    zcr = np.mean(librosa.feature.zero_crossing_rate(y=data).T, axis=0)\n",
         "\n",
@@ -735,7 +735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 70,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -745,7 +745,7 @@
         "    # and the ending of each audio files as seen above.\n",
         "    data, sample_rate = librosa.load(path, duration=2.5, offset=0.6)\n",
         "    \n",
-        "    result = extract_features(data)\n",
+        "    result = extract_features(data, sample_rate)\n",
         "    \n",
         "    return result\n",
         "    "
@@ -777,7 +777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [
         {
